updated transaction schema, added credit and debit routes and controllers
