# routes/index.js
@@ -4,8 +4,9 @@ import mongoose from 'mongoose'
 import { 
     getAccounts, 
     createAccount, 
-    getTransactions, 
-    createTransfer 
+    getTransactions,
+    createDebit,
+    createCredit
 } from '../controllers'
 
 const app = express()
@@ -14,12 +15,13 @@ const uri = 'mongodb://localhost:27017,localhost:27018,localhost:27019/txn';
 
 mongoose.connect(uri, { replicaSet: 'rs', useNewUrlParser: true  });
 
-// mongoose.connection.dropDatabase();
+mongoose.connection.dropDatabase();
 
 app.get('/accounts', getAccounts)
 app.post('/accounts', createAccount)
 
 app.get('/transactions', getTransactions)
-app.post('/transactions/send', createTransfer)
+app.post('/transactions/debit', createDebit)
+app.post('/transactions/credit', createCredit)
 
 module.exports = app;
